<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        style="@style/appButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView">

        <Button
            style="@style/orangeButton"
            android:text="@string/appNameSpotifyStreamer"
            android:id="@+id/button1"
            android:layout_alignParentStart="true"
            android:onClick="showApp"/>

        <Button
            style="@style/orangeButton"
            android:text="@string/appNameScores"
            android:id="@+id/button2"
            android:layout_below="@+id/button1"
            android:onClick="showApp"/>

        <Button
            style="@style/orangeButton"
            android:text="@string/appNameLibrary"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:onClick="showApp"/>

        <Button
            style="@style/orangeButton"
            android:text="@string/appNameBuildItBigger"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:onClick="showApp"/>

        <Button
            style="@style/orangeButton"
            android:text="@string/appNameXYZReader"
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            android:onClick="showApp"/>

        <Button
            style="@style/redButton"
            android:text="@string/appNameCapstone"
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            android:onClick="showApp"/>

    </RelativeLayout>

</RelativeLayout>